finish android project

--- a/app/src/main/res/layout/home_pages.xml
+++ b/app/src/main/res/layout/home_pages.xml
@@ -151,76 +151,6 @@
 
     </LinearLayout>
 
-    <!--        <ImageView-->
-    <!--            android:id="@+id/centernote"-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            app:srcCompat="@drawable/ic_links_notebook"/>-->
-
-
-    <!--&lt;!&ndash;        <ImageView&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:id="@+id/centernote"&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:layout_width="0dp"&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;            android:layout_weight="1"&ndash;&gt;-->
-    <!--&lt;!&ndash;            app:srcCompat="@drawable/ic_links_notebook"/>&ndash;&gt;-->
-
-    <!--        <ImageView-->
-    <!--            android:id="@+id/centernote1"-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:tint="@color/orange"-->
-    <!--            android:tintMode="screen"-->
-    <!--            app:srcCompat="@drawable/ic_links_notebook" />-->
-
-
-    <!--    </LinearLayout>-->
-
-    <!--    <LinearLayout-->
-    <!--        android:id="@+id/imagenamelist"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_marginLeft="16dp"-->
-    <!--        android:layout_marginRight="16dp"-->
-    <!--        android:orientation="horizontal"-->
-    <!--        android:weightSum="3"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@id/imagelist">-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center_horizontal"-->
-    <!--            android:lineSpacingExtra="4sp"-->
-    <!--            android:text="Create Notebook"-->
-    <!--            android:textColor="#7b1e58"-->
-    <!--            android:textSize="13sp" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center_horizontal"-->
-    <!--            android:lineSpacingExtra="5sp"-->
-    <!--            android:text="Weekend Plans"-->
-    <!--            android:textColor="#4a4a4a"-->
-    <!--            android:textSize="15sp" />-->
-
-    <!--        <TextView-->
-    <!--            android:layout_width="0dp"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:layout_weight="1"-->
-    <!--            android:gravity="center_horizontal"-->
-    <!--            android:lineSpacingExtra="5sp"-->
-    <!--            android:text="To-Do"-->
-    <!--            android:textColor="#4a4a4a"-->
-    <!--            android:textSize="15sp" />-->
-    <!--    </LinearLayout>-->
-
     <LinearLayout
         android:id="@+id/header3"
         android:layout_width="match_parent"
@@ -259,199 +189,13 @@
             />
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/note1"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/note_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:backgroundTint="#f9f9f9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/header3">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f9f9f9"
-                android:weightSum="4">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:drawableStart="@drawable/ic_oval_6"
-                    android:drawablePadding="16dp"
-                    android:drawableTint="@color/purple"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="5sp"
-                    android:text="Trip to San fran"
-                    android:textColor="#000000"
-                    android:textSize="17sp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="4sp"
-                    android:text="18/06/12"
-                    android:textColor="#4a4a4a"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:letterSpacing="0.01"
-                android:lineSpacingExtra="4sp"
-                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …"
-                android:textColor="#4d5468"
-                android:textSize="13sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/note2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:backgroundTint="#f9f9f9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/note1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f9f9f9"
-                android:weightSum="4">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:drawableStart="@drawable/ic_oval_5"
-                    android:drawablePadding="16dp"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="5sp"
-                    android:text="Shopping list"
-                    android:textColor="#000000"
-                    android:textSize="17sp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="4sp"
-                    android:text="18/06/12"
-                    android:textColor="#4a4a4a"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:letterSpacing="0.01"
-                android:lineSpacingExtra="4sp"
-                android:text="So far, this is what we need for our trip:"
-                android:textColor="#4d5468"
-                android:textSize="13sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/note3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:backgroundTint="#f9f9f9"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/note2">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#f9f9f9"
-                android:weightSum="4">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:drawableStart="@drawable/ic_oval_6"
-                    android:drawablePadding="16dp"
-                    android:drawableTint="@color/purple"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="5sp"
-                    android:text="Trip to San fran"
-                    android:textColor="#000000"
-                    android:textSize="17sp" />
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="end"
-                    android:letterSpacing="0.01"
-                    android:lineSpacingExtra="4sp"
-                    android:text="18/06/12"
-                    android:textColor="#4a4a4a"
-                    android:textSize="12sp" />
-
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:letterSpacing="0.01"
-                android:lineSpacingExtra="4sp"
-                android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …"
-                android:textColor="#4d5468"
-                android:textSize="13sp" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-
-
-    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--        android:id="@+id/fab"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_margin="@dimen/fab_margin"-->
-    <!--        android:layout_marginEnd="8dp"-->
-    <!--        android:layout_marginBottom="8dp"-->
-    <!--        android:background="@drawable/fab"-->
-    <!--        android:tint="@android:color/white"-->
-    <!--        app:backgroundTint="#3D0F54"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:srcCompat="@android:drawable/ic_input_add" />-->
-
+        app:layout_constraintTop_toBottomOf="@id/header3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
