--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/note_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
@@ -16,9 +17,8 @@
         android:orientation="horizontal">
 
         <ImageView
-
+            android:id="@+id/back"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:paddingHorizontal="11dp"
@@ -33,6 +33,7 @@
 
 
         <ImageView
+            android:id="@+id/change_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -45,13 +46,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+
         android:layout_marginHorizontal="24dp"
         android:layout_marginVertical="16dp">
 
         <CheckBox
+            android:id="@+id/date"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:backgroundTint="@color/white"
             android:buttonTint="@color/white"
             android:paddingStart="8dp"
@@ -64,11 +67,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
         android:orientation="vertical">
 
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/note_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="7dp"
@@ -77,10 +82,12 @@
             android:textSize="22dp"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/note_desc"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
             android:paddingTop="7dp"
             android:text="@string/app_w"
             android:textColor="#000000"
