--- a/app/src/main/res/layout/note_select_color.xml
+++ b/app/src/main/res/layout/note_select_color.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/select_color_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
     android:orientation="vertical"
-    tools:context=".EditNoteColor">
+    tools:context=".NoteSelectColor">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="45dp"
-
         android:orientation="horizontal">
 
         <ImageView
-
+            android:id="@+id/back"
             android:layout_width="wrap_content"
 
             android:layout_height="wrap_content"
@@ -34,11 +32,6 @@
             android:layout_height="match_parent"
             android:layout_weight="1"></View>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/pickershap" />
 
     </LinearLayout>
 
@@ -50,6 +43,7 @@
         android:layout_marginVertical="16dp">
 
         <CheckBox
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/white"
@@ -66,6 +60,7 @@
 
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -76,6 +71,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -89,7 +85,6 @@
 
     <View
         android:layout_width="match_parent"
-
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:layout_weight="1" />
@@ -98,18 +93,18 @@
         android:id="@+id/FrameLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="8dp"
         android:background="#ffffff"
         android:orientation="vertical"
-        android:paddingStart="64dp"
-        android:paddingTop="48dp"
-        android:paddingEnd="64dp"
-        android:paddingBottom="48dp"
+        android:paddingStart="54dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="54dp"
+        android:paddingBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/saveBtn"
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
@@ -119,35 +114,45 @@
             android:weightSum="4">
 
             <ImageView
+                android:id="@+id/color1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/purple"
+                android:onClick="selectColor"
+                android:tag="ic_darkblue"
                 app:srcCompat="@drawable/ic_darkblue" />
 
             <ImageView
+                android:id="@+id/color2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/lighgreen"
+                android:onClick="selectColor"
+                android:tag="ic_green"
                 app:srcCompat="@drawable/ic_green" />
 
             <ImageView
+                android:id="@+id/color3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="selectColor"
+                android:tag="ic_red"
                 app:srcCompat="@drawable/ic_red" />
 
             <ImageView
+                android:id="@+id/color4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/blue2"
+                android:onClick="selectColor"
+                android:tag="ic_bluegreen"
                 app:srcCompat="@drawable/ic_bluegreen" />
         </LinearLayout>
 
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -155,35 +160,41 @@
             android:weightSum="4">
 
             <ImageView
+                android:id="@+id/color5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/orange"
+                android:onClick="selectColor"
+                android:tag="ic_orange"
                 app:srcCompat="@drawable/ic_orange" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/blue3"
+                android:onClick="selectColor"
+                android:tag="ic_blue"
                 app:srcCompat="@drawable/ic_blue" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/red2"
+                android:onClick="selectColor"
+                android:tag="ic_purble"
                 app:srcCompat="@drawable/ic_purble" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:tint="@color/red0"
+                android:onClick="selectColor"
+                android:tag="ic_redlight"
                 app:srcCompat="@drawable/ic_redlight" />
         </LinearLayout>
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -194,6 +205,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:onClick="selectColor"
+                android:tag="ic_darkred2"
                 android:tint="@color/pink"
                 app:srcCompat="@drawable/ic_darkred2" />
 
@@ -201,19 +214,25 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_darkblue" />
+                android:onClick="selectColor"
+                android:tag="ic_move"
+                app:srcCompat="@drawable/ic_move" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_darkred2" />
+                android:onClick="selectColor"
+                android:tag="darksred5"
+                app:srcCompat="@drawable/darksred5" />
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                app:srcCompat="@drawable/ic_purble" />
+                android:onClick="selectColor"
+                android:tag="ic_gray"
+                app:srcCompat="@drawable/ic_gray" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
