--- a/app/src/main/res/layout/empty_note.xml
+++ b/app/src/main/res/layout/empty_note.xml
@@ -19,27 +19,31 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:orientation="horizontal"
-            android:weightSum="2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:scaleType="fitStart"
+                android:scaleType="center"
+                android:layout_gravity="start"
                 app:srcCompat="@drawable/navbox" />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3" />
 
             <TextView
                 android:id="@+id/signout"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center"
                 android:layout_weight="1"
-                android:gravity="end"
-                android:text=""
+                android:gravity="start"
+                android:text="singout"
                 android:textColor="#7b1e58"
                 android:textSize="17sp" />
         </LinearLayout>
