--- a/app/src/main/res/layout/note_edit.xml
+++ b/app/src/main/res/layout/note_edit.xml
@@ -90,7 +90,7 @@
             android:layout_marginTop="16dp"
             android:paddingTop="7dp"
             android:text="@string/app_w"
-            android:textColor="#000000"
+            android:textColor="@color/black_text"
             android:textSize="16dp" />
 
 
