--- a/app/src/main/res/layout/note_select_color.xml
+++ b/app/src/main/res/layout/note_select_color.xml
@@ -77,7 +77,7 @@
             android:layout_marginStart="10dp"
             android:paddingTop="7dp"
             android:text="@string/app_w"
-            android:textColor="#000000"
+            android:textColor="@color/black_text"
             android:textSize="16dp" />
 
 
@@ -90,11 +90,12 @@
         android:layout_weight="1" />
 
     <LinearLayout
+
         android:id="@+id/FrameLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="#ffffff"
+        android:background="@drawable/shape_pick"
         android:orientation="vertical"
         android:paddingStart="54dp"
         android:paddingTop="16dp"
