--- a/app/src/main/res/layout/notebooks_page.xml
+++ b/app/src/main/res/layout/notebooks_page.xml
@@ -24,7 +24,7 @@
         android:letterSpacing="0.01"
         android:lineSpacingExtra="7sp"
         android:text="Notebooks"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="34sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/back" />
