--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -22,14 +22,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#f9f9f9"
-                android:weightSum="4">
+               >
 
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    android:orientation="horizontal"
-                    android:weightSum="10">
+
 
                     <ImageView
                         android:id="@+id/title_img"
@@ -44,15 +39,13 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="9"
+                        android:layout_weight="4"
                         android:drawablePadding="16dp"
-                        android:drawableTint="@color/purple"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="5sp"
                         android:text="Trip to San fran"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
                         android:textSize="17sp" />
-                </LinearLayout>
 
 
                 <TextView
@@ -61,14 +54,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:gravity="end"
+                    android:gravity="start"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="4sp"
                     android:text="18/06/12"
-                    android:textColor="#4a4a4a"
+                    android:textColor="@color/white_text"
                     android:textSize="12sp" />
+                </LinearLayout>
 
-            </LinearLayout>
 
             <TextView
                 android:id="@+id/note_desc"
@@ -78,7 +71,7 @@
                 android:letterSpacing="0.01"
                 android:lineSpacingExtra="4sp"
                 android:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …"
-                android:textColor="#4d5468"
+                android:textColor="@color/emai_pass_hint"
                 android:textSize="13sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
