--- a/app/src/main/res/layout/select_color_page.xml
+++ b/app/src/main/res/layout/select_color_page.xml
@@ -13,7 +13,7 @@
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="5sp"
         android:text="cancel"
-        android:textColor="#4a4a4a"
+        android:textColor="@color/white_text"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -60,22 +60,23 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="16dp"
+        android:textAllCaps="false"
         android:background="@drawable/but_sing"
         android:text="save"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
+
         app:layout_constraintBottom_toTopOf="@+id/FrameLayout1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title">
+        app:layout_constraintTop_toBottomOf="@+id/title"/>
 
-    </Button>
 
     <LinearLayout
         android:id="@+id/FrameLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="#ffffff"
+        android:background="@drawable/shape_pick"
         android:orientation="vertical"
         android:paddingStart="54dp"
         android:paddingTop="8dp"
