--- a/app/src/main/res/drawable/ic_darkred2.xml
+++ b/app/src/main/res/drawable/ic_darkred2.xml
@@ -6,7 +6,7 @@
 
     <path
         android:name="path1"
-        android:fillColor="#FFB4EC51"
+        android:fillColor="@color/pink"
         android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
         android:strokeWidth="1"
         android:strokeColor="#00000000">
