--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -39,7 +39,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_weight="4"
+                        android:layout_weight="5"
                         android:drawablePadding="16dp"
                         android:letterSpacing="0.01"
                         android:lineSpacingExtra="5sp"
@@ -53,8 +53,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:gravity="start"
+                    android:layout_weight="2"
+                    android:gravity="end"
                     android:letterSpacing="0.01"
                     android:lineSpacingExtra="4sp"
                     android:text="18/06/12"
