--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -65,30 +65,30 @@
 
 
         <Button
-            android:layout_marginTop="10dp"
             android:id="@+id/singinBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="16dp"
-            android:background="@drawable/but_sing"
-            android:text="@string/Signin"
-            android:textColor="@color/white"
-            android:textAllCaps="false"
             android:layout_marginBottom="10dp"
-            android:src="@drawable/primary_button" />
+            android:background="@drawable/but_sing"
+            android:src="@drawable/primary_button"
+            android:text="@string/Signin"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
 
         <Button
-            android:textAllCaps="false"
             android:id="@+id/singupTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            android:background="@null"
             android:gravity="center"
             android:padding="8dp"
             android:text="Sign up"
-            android:background="@null"
+            android:textAllCaps="false"
             android:textColor="#1A1824" />
 
 
