--- a/app/src/main/res/layout/row_note.xml
+++ b/app/src/main/res/layout/row_note.xml
@@ -21,32 +21,29 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#f9f9f9"
-               >
+                android:background="#f9f9f9">
 
 
+                <ImageView
+                    android:id="@+id/title_img"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_oval_6" />
 
-                    <ImageView
-                        android:id="@+id/title_img"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/ic_oval_6" />
-
-                    <TextView
-                        android:id="@+id/note_name"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_weight="5"
-                        android:drawablePadding="16dp"
-                        android:letterSpacing="0.01"
-                        android:lineSpacingExtra="5sp"
-                        android:text="Trip to San fran"
-                        android:textColor="@color/black"
-                        android:textSize="17sp" />
-
+                <TextView
+                    android:id="@+id/note_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="5"
+                    android:drawablePadding="16dp"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="5sp"
+                    android:text="Trip to San fran"
+                    android:textColor="@color/black"
+                    android:textSize="17sp" />
 
                 <TextView
                     android:id="@+id/note_date"
@@ -60,7 +57,7 @@
                     android:text="18/06/12"
                     android:textColor="@color/white_text"
                     android:textSize="12sp" />
-                </LinearLayout>
+            </LinearLayout>
 
 
             <TextView
